--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,3 @@
-$main-color: #000;
-$dark-color: #fff;
-$light-color: #f32;
+$main-color: rgb(59, 127, 148);
+$dark-color: #000;
+$light-color: #fff;
