--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,6 +101,18 @@ body {
   background-color: $dark-color;
   border: 2px solid $light-color;
 }
+.textReader input {
+  height: 3em;
+  width: 6em;
+  padding: 0.5em;
+  margin-left: 0.5em;
+  border-radius: 1em;
+  font-size: 0.85em;
+  font-weight: bold;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  border: 1px solid $main-color;
+}
 #moon {
   color: $light-color;
   transition: all 1s ease-out;
