--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,6 +101,9 @@ body {
   background-color: $dark-color;
   border: 2px solid $light-color;
 }
+.buttons {
+  display: flex;
+}
 .textReader input {
   height: 3em;
   width: 6em;
@@ -171,8 +174,8 @@ body {
     }
     .control {
       position: absolute;
-      top: 1.8em;
-      right: 4em;
+      top: 16px;
+      right: 1.5em;
     }
   }
   .wrapper {
@@ -184,5 +187,27 @@ body {
     position: absolute;
     left: 0;
     margin: 0.2em 1em;
+  }
+  .buttons {
+    display: block;
+  }
+  .textReader textarea {
+    margin-top: 3rem;
+    height: 400px;
+    width: 80%;
+  }
+  .buttons button {
+    padding: 0.5rem 1rem;
+    margin: 1rem 0.5rem;
+  }
+  .inputCont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .inputCont input {
+    height: 2.4em;
+    width: 5em;
+    padding: 0.5em;
   }
 }
